# ddot

./: .cursorrules  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.ps1  build_wasm.ps1
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: gpu.rs  main.rs
core/: Cargo.toml
core-macros/: Cargo.toml
core-macros/src/: lib.rs
core/src/: lib.rs
core/src/core/: image.rs  mod.rs  params.rs  validation.rs
core/src/dithering/: mod.rs  utils.rs
core/src/dithering/algorithms/: atkinson.rs  bayer.rs  burkes.rs  floyd_steinberg.rs  jjn.rs  mod.rs  only_palette.rs  random.rs  sierra.rs  sierra_lite.rs  sierra_two_row.rs  stucki.rs
core/src/dithering/gpu/: bayer.wgsl  random.wgsl
core/src/filter/: definition.rs  detect.rs  error.rs  filter.rs  gpu.rs  mod.rs  params.rs
core/src/filters/: adjustment.rs  definition.rs  filter.rs  gaussian_blur.rs  grayscale.rs  hsl.rs  kawase_blur.rs  mod.rs  noise.rs
core/src/filters/gpu/: adjustment.wgsl  gaussian_blur.wgsl  kawase_blur.wgsl  noise.wgsl
core/src/image/: color.rs  mod.rs
core/src/palette/: mod.rs
core/src/palette/generators/: kmeans.rs  median_cut.rs  mod.rs  octree.rs
core/src/transform/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
