[package]
name = "ddot-cli"
version = "0.1.2"
edition = "2024"
description = "CLI for ddot — apply image filter pipelines with CPU/GPU backend"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xbvuno/ddot"
homepage = "https://github.com/xbvuno/ddot"
keywords = ["image", "cli", "filters", "gpu", "pipeline"]
categories = ["multimedia::images", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ddot-core = { version = "0.1.2", path = "../core" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
wgpu = "22.1.0"

