[package]
name = "ddot-core-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for ddot-core — #[derive(Filter)] and #[derive(FilterParams)]"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xbvuno/ddot"
homepage = "https://github.com/xbvuno/ddot"
keywords = ["image", "macros", "filters", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"