[package]
name = "ddot-core"
version = "0.1.0"
edition = "2024"
description = "High-performance image processing core — filters, dithering, palette generation, GPU compute via wgpu/WebGPU"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xbvuno/ddot"
homepage = "https://github.com/xbvuno/ddot"
keywords = ["image", "dithering", "wasm", "gpu", "processing"]
categories = ["multimedia::images", "graphics"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
ddot-core-macros = { version = "0.1.0", path = "../core-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = { version = "22.1.0", features = ["webgpu"] }
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
