[package]
name = "ddot-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ddot-core = { path = "../core" }
js-sys = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "ImageData",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

