[package]
name = "ddot-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for ddot — high-performance image processing in the browser"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xbvuno/ddot"
homepage = "https://github.com/xbvuno/ddot"
keywords = ["wasm", "image", "dithering", "webgpu", "canvas"]
categories = ["multimedia::images", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ddot-core = { version = "0.1.0", path = "../core" }
js-sys = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "ImageData",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

